--- a/Hurtownia.csproj
+++ b/Hurtownia.csproj
@@ -94,15 +94,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\ProduktyContext.cs" />
+    <Compile Include="DAL\ProduktyInitializer.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202307032020008_InitialCreate.cs" />
+    <Compile Include="Migrations\202307032020008_InitialCreate.Designer.cs">
+      <DependentUpon>202307032020008_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202307032027512_dodaniePolaOpisSkrocony.cs" />
+    <Compile Include="Migrations\202307032027512_dodaniePolaOpisSkrocony.Designer.cs">
+      <DependentUpon>202307032027512_dodaniePolaOpisSkrocony.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Kategoria.cs" />
     <Compile Include="Models\PozycjaZamowienia.cs" />
     <Compile Include="Models\Produkt.cs" />
@@ -112,6 +124,9 @@
   <ItemGroup>
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -121,7 +136,14 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Home\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202307032020008_InitialCreate.resx">
+      <DependentUpon>202307032020008_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202307032027512_dodaniePolaOpisSkrocony.resx">
+      <DependentUpon>202307032027512_dodaniePolaOpisSkrocony.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
