--- a/Web.config
+++ b/Web.config
@@ -14,6 +14,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+	<connectionStrings>
+		<add name="ProduktyContext"
+			 connectionString="Server=localhost;Database=Hurtownia;Trusted_Connection=True;"
+			 providerName="System.Data.SqlClient"/>
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
