--- a/Web.config
+++ b/Web.config
@@ -13,6 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key="ObrazkiFolder" value="~/Content/img/"/>
   </appSettings>
 	<connectionStrings>
 		<add name="ProduktyContext" connectionString="Server=localhost;Database=Hurtownia;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
