--- a/Hurtownia.csproj
+++ b/Hurtownia.csproj
@@ -168,6 +168,58 @@
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
     <Content Include="Global.asax" />
+    <Content Include="Views\Produkty\Content\img\dwumas.jpg" />
+    <Content Include="Views\Produkty\Content\img\frigo.jpg" />
+    <Content Include="Views\Produkty\Content\img\stalowka.png" />
+    <Content Include="Views\Produkty\Content\img\szyba.jpg" />
+    <Content Include="Views\Produkty\Content\img\tarcza.png" />
+    <Content Include="Views\Produkty\Content\img\uchwyt.png" />
+    <Content Include="Views\Produkty\Content\Site.css" />
+    <Content Include="Views\Produkty\Content\src\bootstrap.min.css" />
+    <Content Include="Views\Produkty\Content\src\bootstrap.min.js" />
+    <Content Include="Views\Produkty\Content\src\jquery-3.3.1.slim.min.js" />
+    <Content Include="Views\Produkty\Content\src\strona.css" />
+    <Content Include="Views\Produkty\Content\themes\base\accordion.css" />
+    <Content Include="Views\Produkty\Content\themes\base\all.css" />
+    <Content Include="Views\Produkty\Content\themes\base\autocomplete.css" />
+    <Content Include="Views\Produkty\Content\themes\base\base.css" />
+    <Content Include="Views\Produkty\Content\themes\base\button.css" />
+    <Content Include="Views\Produkty\Content\themes\base\core.css" />
+    <Content Include="Views\Produkty\Content\themes\base\datepicker.css" />
+    <Content Include="Views\Produkty\Content\themes\base\dialog.css" />
+    <Content Include="Views\Produkty\Content\themes\base\draggable.css" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_222222_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_444444_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_454545_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_555555_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_777620_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_777777_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_888888_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_cc0000_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="Views\Produkty\Content\themes\base\jquery-ui.css" />
+    <Content Include="Views\Produkty\Content\themes\base\jquery-ui.min.css" />
+    <Content Include="Views\Produkty\Content\themes\base\menu.css" />
+    <Content Include="Views\Produkty\Content\themes\base\progressbar.css" />
+    <Content Include="Views\Produkty\Content\themes\base\resizable.css" />
+    <Content Include="Views\Produkty\Content\themes\base\selectable.css" />
+    <Content Include="Views\Produkty\Content\themes\base\selectmenu.css" />
+    <Content Include="Views\Produkty\Content\themes\base\slider.css" />
+    <Content Include="Views\Produkty\Content\themes\base\sortable.css" />
+    <Content Include="Views\Produkty\Content\themes\base\spinner.css" />
+    <Content Include="Views\Produkty\Content\themes\base\tabs.css" />
+    <Content Include="Views\Produkty\Content\themes\base\theme.css" />
+    <Content Include="Views\Produkty\Content\themes\base\tooltip.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -210,6 +262,7 @@
     <Content Include="Views\Koszyk\DodajDoKoszyka.cshtml" />
     <Content Include="Views\Produkty\_KategorieMenu.cshtml" />
     <Content Include="Views\Produkty\_ProduktyList.cshtml" />
+    <Content Include="Views\Produkty\Szczegoly.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
