--- a/packages.config
+++ b/packages.config
@@ -11,6 +11,9 @@
   <package id="jQuery" version="3.7.0" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.13.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.8.0.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc.pl" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
@@ -20,11 +23,17 @@
   <package id="Microsoft.AspNet.WebPages.pl" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="MvcSiteMapProvider.MVC5" version="4.6.26" targetFramework="net452" />
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.26" targetFramework="net452" />
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.1" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
