--- a/Hurtownia.csproj
+++ b/Hurtownia.csproj
@@ -329,6 +329,10 @@
     <Compile Include="Migrations\202307061456422_ASPIDENTITY.Designer.cs">
       <DependentUpon>202307061456422_ASPIDENTITY.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202307061616291_zam.cs" />
+    <Compile Include="Migrations\202307061616291_zam.Designer.cs">
+      <DependentUpon>202307061616291_zam.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DaneUzytkownika.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -375,6 +379,8 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Koszyk\Zaplac.cshtml" />
+    <Content Include="Views\Koszyk\PotwierdzenieZamowienia.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -396,6 +402,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202307061456422_ASPIDENTITY.resx">
       <DependentUpon>202307061456422_ASPIDENTITY.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202307061616291_zam.resx">
+      <DependentUpon>202307061616291_zam.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
