--- a/Web.config
+++ b/Web.config
@@ -20,7 +20,7 @@
     <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="ProduktyContext" connectionString="Server=localhost;Database=Hurtownia;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="ProduktyContext" connectionString="Server=tcp:hurt.database.windows.net,1433;Initial Catalog=Hurtownia;Persist Security Info=False;User ID=ambioda;Password=Hurtownia!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
