--- a/Web.config
+++ b/Web.config
@@ -19,10 +19,10 @@
     <add key="MvcSiteMapProvider_UseExternalDIContainer" value="false" />
     <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
   </appSettings>
-  <connectionStrings>
-    <add name="ProduktyContext" connectionString="Server=tcp:hurt.database.windows.net,1433;Initial Catalog=Hurtownia;Persist Security Info=False;User ID=ambioda;Password=Hurtownia!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-  <system.web>
+	<connectionStrings>
+		<add name="ProduktyContext" connectionString="Server=localhost\SQLEXPRESS;Database=master;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+	<system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
