--- a/packages.config
+++ b/packages.config
@@ -5,7 +5,7 @@
   <package id="Glimpse" version="1.8.6" targetFramework="net452" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net452" />
   <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net452" />
-  <package id="Glimpse.AspNetCache" version="0.9.9.35094" targetFramework="net452" />
+  <package id="Glimpse.AspNetCache" version="0.9.9.25002" targetFramework="net452" />
   <package id="Glimpse.EF6" version="1.6.5" targetFramework="net452" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net452" />
   <package id="jQuery" version="3.7.0" targetFramework="net452" />
@@ -16,8 +16,8 @@
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc.pl" version="5.2.7" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor.pl" version="3.2.7" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.3.0-preview1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor.pl" version="3.3.0-preview1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.pl" version="3.2.7" targetFramework="net452" />
