--- a/packages.config
+++ b/packages.config
@@ -34,6 +34,8 @@
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Postal.Mvc5" version="1.2.0" targetFramework="net452" />
+  <package id="RazorEngine" version="3.4.1" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.1" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
